--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "pinia": "^3.0.2",
     "stats.js": "^0.17.0",
     "three": "^0.175.0",
     "vue": "^3.2.13"
